# services.api

./: .env  .gitignore  Cargo.toml  Dockerfile
.sqlx/: query-0306035cb1e78d4207ab6958ceb40ccd415ff048fec885cd81f3e78f266d98a8.json  query-04071a56e2c63654ae150ad4304bd83a0a61cf774a81509eb39104f74bbb3f1e.json  query-09c486db6a0ee802bb5b5ad0c706dbc83cf9f56316b62dfdc4bb8f98600b02db.json  query-123f5b97dedafe6601f96f4602b3f7335e344837d2bef2f1e53887be58a93d48.json  query-130a330885aef32daf7d1066ead82ddf0ee08ff1325b597d4da7b5981d2c8826.json  query-13c8969fd277be27ca87de9f7aaad152d8b593b361b26068335e5b488923fd16.json  query-147505410c655a42817f6f0d027219c74bc09af553e163366c4e14b472d133f9.json  query-17fb87ffdcf973f80cda6b4df96928a2a9873da90ebf2be6497ea4b72d08e1a9.json  query-18de5977271388295915617083029d50c7566922624fcdf6d1afb9c661e3a454.json  query-1e479d9fd0b270a3ff17612899dab517baefddcf42244036c8149bca46f14d05.json  query-1f086fced5dfef33efdf13c86a326c348667b51b70e0b2f5e21bbaaa6eb0c619.json  query-259c4690d5295bae5cf5d73a0b457720670f3ca6db3e4e545e00fd3ce46c3e65.json  query-2b2185f8586ea021d8555f4e61a79fffcac01ce472b7f48ef306de4e9bad759d.json  query-320171fb5436e7ec2719cd3d10738f1585db89357ca452691b18f692fa1fd220.json  query-329fa6e2db7307fc2a4171928d0c282ac1e551494a64aa6eddaac98c1b6dd38e.json  query-342ed3b8a67382cc4c092c883d8ffed74b55776b1a47780c83e570a00c290f95.json  query-3539157d7f88826b807731039c4c0fd31e5f8b4e3de13043927c6533ee97f2c6.json  (+48 more)
clients/finance/: Cargo.toml
clients/finance/src/: finance.rs  invoices.rs  lib.rs
migrations/: 20240324145054_create-table-work-note.sql  (+57 more)
services/bff/: Cargo.toml  Dockerfile
services/bff/src/: main.rs
services/bff/src/domains/: budget.rs  mod.rs  operations.rs
services/bff/src/gateways/: budget.rs  mod.rs
services/bff/src/handlers/: budget.rs  finance.rs  invoices.rs  mod.rs
services/bff/src/routes/: budget.rs  finance.rs  invoices.rs  mod.rs
services/budget/: Cargo.toml
services/budget/src/: logger.rs  main.rs
services/budget/src/domains/: accounts.rs  errors.rs  financial_plans.rs  generator.rs  installments.rs  mod.rs  recurrence_transactions.rs  recurrences.rs  settlements.rs  transactions.rs  views.rs
services/budget/src/domains/transactions/: report.rs
services/budget/src/handlers/: accounts.rs  financial_plans.rs  generator.rs  installment.rs  installments.rs  mod.rs  recurrence_transactions.rs  recurrences.rs  settlements.rs  transactions.rs
services/budget/src/handlers/transactions/: report.rs
services/budget/src/repositories/: accounts.rs  financial_plans.rs  installments.rs  mod.rs  recurrence_transactions.rs  recurrences.rs  settlements.rs  transactions.rs
services/budget/src/routes/: accounts.rs  financial_plans.rs  mod.rs  recurrence_transactions.rs  recurrences.rs  settlements.rs  transactions.rs  views.rs
services/budget/src/routes/transactions/: report.rs
services/finance/: Cargo.toml  Dockerfile
services/finance/.sqlx/: query-3539157d7f88826b807731039c4c0fd31e5f8b4e3de13043927c6533ee97f2c6.json  query-3e2bbde9ac6d2315598aafab577b64a8f6f08cc7b220c9a4ad183e1b22bd5dd4.json  query-3e8fa479caa71e4468ea874dcd05633d65c0be25a6a5bc66cdcbac3f7e400cbc.json
services/finance/src/: main.rs
services/finance/src/domains/: accounts.rs  entries.rs  errors.rs  invoice_relations.rs  invoices.rs  mod.rs  tags.rs
services/finance/src/domains/views/: views.rs
services/finance/src/handlers/: accounts.rs  entries.rs  invoices.rs  mod.rs  tags.rs
services/finance/src/repositories/: accounts.rs  entries.rs  invoice_relations.rs  invoices.rs  mod.rs  tags.rs
services/finance/src/routes/: accounts.rs  entries.rs  invoices.rs  mod.rs  tags.rs
src/: main.rs
(+54 files in other folders)
