[package]
name = "backend-home-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "uuid", "time", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
async-trait = "0.1.77"
dotenv = "0.15.0"
thiserror = "1.0.57"
