[workspace]
members = [ "services/*"]
resolver = "2"

[workspace.dependencies]
tonic = "0.11"
prost = "0.12"
axum = "0.7.4"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "uuid", "time", "chrono", "bigdecimal"] }
tokio = { version = "1.36.0", features = ["full"] }
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
async-trait = "0.1.77"
dotenv = "0.15.0"
thiserror = "1.0.57"
bigdecimal = { version = "0.3.0", features = ["serde"] }
tower-http = {version = "0.5.2", features = ['cors']}
mockall = "0.12.1"
