[package]
name = "finance-client"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
uuid.workspace = true
async-trait.workspace = true
thiserror.workspace = true
bigdecimal.workspace = true
tower-http.workspace = true
reqwest.workspace = true
dotenv.workspace = true