[package]
name = "bff"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
uuid.workspace = true
async-trait.workspace = true
dotenv.workspace = true
thiserror.workspace = true
bigdecimal.workspace = true
tower-http.workspace = true
finance.workspace = true
reqwest = {version = "0.12.4", features = ["json"]}
