[package]
name = "budget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
uuid.workspace = true
async-trait.workspace = true
dotenv.workspace = true
thiserror.workspace = true
bigdecimal.workspace = true
tower-http.workspace = true
tonic = { workspace = true }
prost = { workspace = true }
mockall = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
